--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -88,7 +88,7 @@
 }
 
 .product-page .product-image-wrapper img {
-    height: fit-content;
+    height: auto;
     align-self: center;
 }
 
